# eigen_clusol

./: CMakeLists.txt  README.md  et
eigenlusol/: eigenlusol.cpp  eigenlusol.h  options.h  typedefs.h
tests/: CMakeLists.txt  test.cpp
